--- a/qtify/src/Components/Card/card.css
+++ b/qtify/src/Components/Card/card.css
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   row-gap: 5px;
-  margin: 50px;
+  margin-top: 10px;
+  border-radius: 8px;
 }
 .card {
   border-radius: 10px;
