--- a/qtify/src/Components/HeroSection/herosection.css
+++ b/qtify/src/Components/HeroSection/herosection.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 272px;
-  width: 100vw;
+  width: 100%;
   background-color: var(--css-black);
 }
 .hs-content {
@@ -18,4 +18,9 @@
 .hs-img {
   width: 100%;
   height: 100%;
+}
+.heading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
