--- a/qtify/src/Components/Navbar/Navbar.css
+++ b/qtify/src/Components/Navbar/Navbar.css
@@ -4,6 +4,6 @@
   align-items: center;
   background-color: var(--css-primary);
   padding: 0 32px;
-  width: 100 vw;
+  width: 100%;
   height: 74px;
 }
